--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function stat() {
 	else document.F0.B0.value=" Play  ";
 }
 
-//--></SCRIPT>
+</SCRIPT>
 <META content="MSHTML 6.00.2900.2180" name=GENERATOR>
 <SCRIPT language=JavaScript type=text/JavaScript>
 <!--
@@ -89,7 +89,7 @@ function MM_reloadPage(init) {  //reloads the window if Nav4 resized
   else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
 }
 MM_reloadPage(true);
-//-->
+
 
 </SCRIPT>
 </head>
